Go file transfer (#4)
* [back]feature: refactor record upload flow, add direct file transfer to ML-service, update Swagger

* [back]feature: add user registration endpoint

* [back]feature: add docker-compose
