# backend/go_api/docs/swagger.json
@@ -4,11 +4,11 @@
         "contact": {}
     },
     "paths": {
-        "/records/{recordID}/analyze": {
+        "/records/upload": {
             "post": {
-                "description": "Fetches the data_url for the record, sends it to the ML service, and returns the result.",
+                "description": "Uploads a voice file, sends it to the ML service for analysis, and saves the record.",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -16,13 +16,20 @@
                 "tags": [
                     "records"
                 ],
-                "summary": "Analyze a record",
+                "summary": "Upload  a new voice record",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Record ID",
-                        "name": "recordID",
-                        "in": "path",
+                        "description": "User ID",
+                        "name": "userID",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Voice file",
+                        "name": "file",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -30,11 +37,56 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/client.AnalysisResult"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "integer"
+                            }
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Register a new user",
+                "parameters": [
+                    {
+                        "description": "User info",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.RegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "integer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -91,19 +143,21 @@
         }
     },
     "definitions": {
-        "client.AnalysisResult": {
+        "handler.RegisterRequest": {
             "type": "object",
+            "required": [
+                "login",
+                "nickname",
+                "password"
+            ],
             "properties": {
-                "emotion": {
+                "login": {
                     "type": "string"
                 },
-                "themes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "nickname": {
+                    "type": "string"
                 },
-                "tone": {
+                "password": {
                     "type": "string"
                 }
             }
@@ -111,14 +165,11 @@
         "repository.Record": {
             "type": "object",
             "properties": {
-                "data_url": {
+                "emotion": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
-                },
-                "mood": {
-                    "type": "string"
                 },
                 "record_date": {
                     "type": "string"
